--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,13 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.spinscale.elasticsearch</groupId>
 	<artifactId>elasticsearch-statsd</artifactId>
-	<version>0.3.3</version>
+	<version>0.3.3-wmf1</version>
 	<packaging>jar</packaging>
 	<description>StatsD monitoring plugin for Elasticsearch</description>
 	<url>https://github.com/Automattic/elasticsearch-statsd-plugin/</url>
 
 	<properties>
-		<elasticsearch.version>1.0.1</elasticsearch.version>
+		<elasticsearch.version>1.6.0</elasticsearch.version>
 		<hamcrest.version>1.3</hamcrest.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
@@ -106,4 +106,17 @@
 		</plugins>
 	</build>
 
+	<distributionManagement>
+		<repository>
+			<id>wikimedia.releases</id>
+			<name>Wikimedia Release Repository</name>
+			<url>https://archiva.wikimedia.org/repository/releases/</url>
+		</repository>
+
+		<snapshotRepository>
+			<id>wikimedia.snapshots</id>
+			<name>Wikimedia Snapshot Repository</name>
+			<url>https://archiva.wikimedia.org/repository/snapshots/</url>
+		</snapshotRepository>
+	</distributionManagement>
 </project>
